1.1.0 (2017-10-10)
------------------

Features
~~~~~~~~

- Waitress now has a __main__ and thus may be called with ``python -mwaitress``

Bugfixes
~~~~~~~~

- Waitress no longer allows lowercase HTTP verbs. This change was made to fall
  in line with most HTTP servers. See https://github.com/Pylons/waitress/pull/170

- When receiving non-ascii bytes in the request URL, waitress will no longer
  abruptly close the connection, instead returning a 400 Bad Request. See
  https://github.com/Pylons/waitress/pull/162 and
  https://github.com/Pylons/waitress/issues/64

1.0.2 (2017-02-04)
------------------

Features
~~~~~~~~

- Python 3.6 is now officially supported in Waitress

Bugfixes
~~~~~~~~

- Add a work-around for libc issue on Linux not following the documented
  standards. If getnameinfo() fails because of DNS not being available it
  should return the IP address instead of the reverse DNS entry, however
  instead getnameinfo() raises. We catch this, and ask getnameinfo()
  for the same information again, explicitly asking for IP address instead of
  reverse DNS hostname. See https://github.com/Pylons/waitress/issues/149 and
  https://github.com/Pylons/waitress/pull/153

1.0.1 (2016-10-22)
------------------

Bugfixes
~~~~~~~~

- IPv6 support on Windows was broken due to missing constants in the socket
  module. This has been resolved by setting the constants on Windows if they
  are missing. See https://github.com/Pylons/waitress/issues/138

- A ValueError was raised on Windows when passing a string for the port, on
  Windows in Python 2 using service names instead of port numbers doesn't work
  with `getaddrinfo`. This has been resolved by attempting to convert the port
  number to an integer, if that fails a ValueError will be raised. See
  https://github.com/Pylons/waitress/issues/139


1.0.0 (2016-08-31)
------------------

Bugfixes
~~~~~~~~

- Removed `AI_ADDRCONFIG` from the call to `getaddrinfo`, this resolves an